feat: implementação do PasswordGenerator ao ms-usuario para criar o hash da senha antes de persistir ao banco de dados
